<resources>
    <string name="app_name">My Application</string>
    <string name="tasks">Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="task_name">Task Name</string>
</resources>