<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskFragment"
    android:background="#E0DCDC">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/add_tasks"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvheading"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvheading"
        android:id="@+id/tilTaskName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/task_name"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:id="@+id/tietTaskName"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/tietDescription"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/tilTaskName"
        android:id="@+id/tilDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:id="@+id/tietDescription"
            android:inputType="text"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/tilDescription"
        android:text="@string/cancel"
        android:backgroundTint="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnSave"
        android:layout_marginVertical="20dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/tilDescription"
        android:text="@string/save"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/green"
        app:layout_constraintLeft_toRightOf="@id/btnCancel"
        android:layout_marginVertical="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>