<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskList"
    android:background="#E0DCDC">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/tasks"
        android:textSize="64sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvheading"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvheading"
        android:id="@+id/tvName"
        android:text="@string/task_name"
        android:textSize="32sp"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:gravity="end"
        android:text="@string/description"
        android:textSize="26sp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/tvDescription"
        />


    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.example.myapplication.AddTaskFragment"
        tools:layout="@layout/fragment_add_task"
        android:id="@+id/frag_AddTask"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/circle_plus_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:id="@+id/ivFAB"/>


</androidx.constraintlayout.widget.ConstraintLayout>